use top-level properties in server subproject

--- a/dev.properties
+++ b/dev.properties
@@ -1,2 +1,7 @@
 # Android build properties
 server.base.url=http://192.168.0.10:8080
+
+# Server properties (default values that can be overridden at call-time)
+server.address=192.168.0.10
+server.port=8080
+db.h2.address=jdbc:h2:./todo
